# ai_video_generator

./: git_sync.bat  pyproject.toml
src/ai_video_generator/: composite_video.py  generator.py  main.py  optimizer.py  pipeline.py  speech_transcriber.py  transcriber.py  video_builder.py
src/ai_video_generator/utils/: downloader.py  file_utils.py  video_utils.py
tests/: test_demo2.py  test_transcriber.py
