[project]
name = "ai-video-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "moviepy (>=2.2.1,<3.0.0)",
    "pytube (>=15.0.0,<16.0.0)",
    "openai-whisper (>=20250625,<20250626)",
    "pydub (>=0.25.1,<0.26.0)",
    "openai (>=1.93.0,<2.0.0)",
    "edge-tts (>=7.0.2,<8.0.0)",
    "dashscope (>=1.23.6,<2.0.0)",
    "retry (>=0.9.2,<0.10.0)"
]

[tool.poetry]
packages = [{include = "ai_video_generator", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
